--- a/Module-3/01_Intro_HTML_CSS/student-exercise/fan-page/CSS/styles.css
+++ b/Module-3/01_Intro_HTML_CSS/student-exercise/fan-page/CSS/styles.css
@@ -1,9 +1,35 @@
+body {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: cornflowerblue;
+    color:cornsilk;
+}
 img{
     height: 300px;
     width: 400px;
 }
 
+header > h1 {
+    text-align: center;
+    font-size: xx-large;
+}
+
+h2 {
+    text-decoration: underline;
+    margin-top: 50px;
+    margin-bottom: 20px;
+}
+
 td{
     text-align: center;
+    border: 1px solid black;
+}
+
+th{
+    border: 1px solid black;
+    font-size: 20px;
+}
+
+table {
+    border-collapse: collapse;
 }
 
