--- a/Module-3/02_CSS_Selectors/student-exercise/style.css
+++ b/Module-3/02_CSS_Selectors/student-exercise/style.css
@@ -15,3 +15,77 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+aside {
+  position: fixed;
+  width: 200px;
+  border-right: 1px solid rgba(0, 173, 238, .4);
+  padding: 0px 20px 0px 20px;
+  height: 100vh;
+}
+
+aside > img {
+  display: block;
+  height: 120px;
+  margin: 0 auto;
+}
+
+main {
+
+  margin-left: 200px;
+  padding: 0px 20px;
+}
+
+aside > nav > ul > li {
+  list-style: none;
+  text-align: center;
+  text-transform: uppercase;
+  border-bottom: 1px solid rgba(0, 173, 238, .4);
+  margin: 10px auto;
+  padding-bottom: 10px;
+  width: 80%;
+  line-height: 2rem;
+}
+
+aside > nav > ul > li > a {
+  font-weight: bold;
+  color: #00adee;
+  text-decoration: none;
+}
+aside > nav > ul > li > a:hover {
+  text-decoration: underline;
+}
+
+main > header{
+  height: 120px;
+}
+main > header > img {
+  display: inline-block;
+  height: 80%;
+}
+
+.banner {
+  width: 100%;
+}
+
+section > div {
+  display: inline-block;
+  width: 33%;
+  padding: 20px 20px 0px 0px;
+}
+
+section > div > h2 {
+  color: #8cc36f;
+}
+
+section > div > h2 > i {
+  margin-right: 10px;
+}
+
+section div:not(:last-child){
+  border-right: 1px solid rgba(170, 239, 135, .8);
+}
+
+div:not(:first-child){
+  padding-left: 20px;
+}
