--- a/Module-3/04_Flexbox/student-lecture/flexboxLayout.css
+++ b/Module-3/04_Flexbox/student-lecture/flexboxLayout.css
@@ -42,4 +42,36 @@ h2 {
 
 /*FLEX settings*/
 
+#container1 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
 
+#container2 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+#container2 :nth-child(6){
+    color: red;
+    order: -2;
+
+    flex-basis: 50%;
+}
+#container2 :nth-child(3){
+    align-self: flex-end;
+}
+
+#container2 :nth-child(4){
+    flex-grow: 1;
+}
+
+#container2 :nth-child(5){
+    flex-grow: 2;
+    order: -1;
+
+}
