--- a/Module-3/04_Flexbox/student-tutorial/styles.css
+++ b/Module-3/04_Flexbox/student-tutorial/styles.css
@@ -11,6 +11,11 @@ body {
   box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.2);
   padding-left: 10px;
   padding-right: 10px;
+  grid-area: header;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 #left-panel {
   grid-area: left-panel;
@@ -28,8 +33,9 @@ div.container {
   grid-template-rows: 100px 1fr 1fr;
   gap: 15px;
   grid-template-areas:
+  "header header header"
     "left-panel main special-announcements"
-    "left-panel main .";
+    "left-panel main weather";
 }
 
 #page-header img {
@@ -153,6 +159,7 @@ aside hr {
 
 #weather {
   width: 100%;
+  grid-area: weather;
 }
 #weather .day {
   font-weight: bold;
@@ -187,6 +194,7 @@ aside#weather section p {
     height: auto;
     width: 100%;
     padding: 0;
+    justify-content: space-evenly;
   }
   #page-header img {
     height: 40px;
@@ -231,6 +239,10 @@ aside#weather section p {
     border-bottom: none;
     border-right: solid black 1px;
   }
+  #weather section {
+    display: flex;
+    justify-content: space-around;
+  }
 }
 
 @media screen and (max-width: 536px) {
@@ -247,5 +259,8 @@ aside#weather section p {
   #weather section p:not(:last-child) {
     border-bottom: solid black 1px;
     border-right: none;
+  }
+  #weather section {
+    flex-direction: column;
   }
 }
