--- a/Module-3/04_Flexbox/student-exercise/mini-exercises/align-content-row/step-1/main.css
+++ b/Module-3/04_Flexbox/student-exercise/mini-exercises/align-content-row/step-1/main.css
@@ -6,7 +6,12 @@ body {
 }
 
 .container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  justify-content: space-between;
   background-color: #F0F0F0;
+  
 }
 
 .box {
