--- a/Module-3/04_Flexbox/student-exercise/mini-exercises/header/step-1/main.css
+++ b/Module-3/04_Flexbox/student-exercise/mini-exercises/header/step-1/main.css
@@ -4,6 +4,7 @@ body {
 }
 
 header {
+  display: flex;
   background-color: #F0F0F0;
   padding: 20px;
 }
@@ -16,6 +17,7 @@ ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  display: flex;
 }
 
 li {
@@ -37,3 +39,9 @@ a:hover {
   color: #00AFEF;
   text-decoration: underline;
 }
+
+
+
+
+
+
