--- a/Module-3/04_Flexbox/student-exercise/mini-exercises/header/step-2/main.css
+++ b/Module-3/04_Flexbox/student-exercise/mini-exercises/header/step-2/main.css
@@ -4,6 +4,7 @@ body {
 }
 
 header {
+  display: flex;
   background-color: #F0F0F0;
   padding: 20px;
 }
@@ -14,12 +15,15 @@ header {
 
 nav {
   flex-grow: 1;
+
 }
 
 ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  display: flex;
+  justify-content: center;
 }
 
 li {
