--- a/Module-3/04_Flexbox/student-exercise/mini-exercises/header/step-3/main.css
+++ b/Module-3/04_Flexbox/student-exercise/mini-exercises/header/step-3/main.css
@@ -4,6 +4,7 @@ body {
 }
 
 header {
+  display: flex;
   background-color: #F0F0F0;
   padding: 20px;
 }
@@ -20,6 +21,8 @@ ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  display: flex;
+  justify-content: flex-end;
 }
 
 li {
