--- a/Module-3/04_Flexbox/student-exercise/mini-exercises/header/step-4/main.css
+++ b/Module-3/04_Flexbox/student-exercise/mini-exercises/header/step-4/main.css
@@ -4,6 +4,7 @@ body {
 }
 
 header {
+  display: flex;
   background-color: #F0F0F0;
   padding: 20px;
 }
@@ -13,6 +14,7 @@ header {
 }
 
 ul {
+  display: flex;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -38,8 +40,12 @@ li a:hover {
   text-decoration: underline;
 }
 
-.spacer {}
+.spacer {
+  flex-grow: 1;
+}
 
 .my-account img {
   width: 32px;
 }
+
+
