Week 9 Day 4 Homework Complete

--- a/Module-3/04_Flexbox/student-exercise/mini-exercises/align-content-column/step-4/main.css
+++ b/Module-3/04_Flexbox/student-exercise/mini-exercises/align-content-column/step-4/main.css
@@ -8,6 +8,11 @@ body {
 .container {
   background-color: #F0F0F0;
   height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-grow: 1;
+  justify-content: stretch;
 }
 
 .box {
