--- a/Module-3/04_Flexbox/student-exercise/mini-exercises/align-content-column/step-1/main.css
+++ b/Module-3/04_Flexbox/student-exercise/mini-exercises/align-content-column/step-1/main.css
@@ -8,6 +8,8 @@ body {
 .container {
   background-color: #F0F0F0;
   height: 500px;
+  display: flex;
+  align-items: center;
 }
 
 .box {
@@ -15,4 +17,5 @@ body {
   background-color: #00AFEF;
   color: #fff;
   border: solid 1px #777;
+
 }
